feat:add submit button to submit and process proved texts

--- a/static/submitForm.html
+++ b/static/submitForm.html
@@ -24,6 +24,12 @@
       <label for="text">Input Text:</label>
       <textarea id="inputStr" name="inputStr" rows="6" cols="50" placeholder="enter text" required></textarea><br><br>
     </div>
+    <div class="right-box" align = "center" >
+        <form action="\submit-ascii-art" method="POST">
+            <input type="submit" value="Submit" id="submitButton">
+          </form>
+          
+    </div>
     <hr>  <div class="lower-content">  
       </div>
   </div>
