style: add emojis to h1 section of error message for dramatic effect

--- a/static/printer.html
+++ b/static/printer.html
@@ -36,7 +36,7 @@
   <section>
   
       <body>
-          <h1>Sorry, We Have An Error</h1>
+          <h1>😟Sorry, We Have An Error😟</h1>
           <p><pre>{{ .Issue }}</pre></p>
       </body>
      
