--- a/static/submitForm.html
+++ b/static/submitForm.html
@@ -13,7 +13,7 @@
       <h2>Create Your Own Ascii Art</h2>
     </div>
     <div class="center-box">
-        <form action="\submit-ascii-art" method="POST">
+        <form action="\ascii-art" method="POST">
             <select id="style" name="style">
                 <option value="standard">standard</option>
                 <option value="shadow">shadow</option>
