--- a/static/errorPrinter.html
+++ b/static/errorPrinter.html
@@ -8,36 +8,15 @@
 </head>
 <body>
     <h1 align = "center">ASCI-ART WEB</h1><br><br>
-  <div class="container">
-    <div class="left-box" >
-      <h2>Create Your Own Ascii Art</h2>
-    </div>
-    <div class="center-box">
-        <form action="\ascii-art" method="POST">
-            <label for="style">Select Banner:</label> <br>
-            <select id="style" name="style">
-              <option value="standard">Standard</option>
-              <option value="shadow">Shadow</option>
-              <option value="thinkertoy">Thinkertoy</option>
-            </select><br><br>
-            
-            <div class="right-box" >
-              <label for="text">Input Text:</label>
-              <textarea id="inputStr" name="inputStr" rows="6" cols="50" placeholder="enter text" required></textarea><br><br>
-              <div class="right-box" >
-                <input type="submit" value="Print" id="submitButton">
-                                    
-              </div>
-            </div>
-
-        </form>
-    </div>
-   </div>
+  
    <h1 align="center">😟Sorry, We Have An Error😟</h1>
   <section>
     <h1 align="center">{{ .Code}}</h1>
     <h2 align="center"><pre>{{ .Issue }}</pre></h2>
   </section>
+  <div class="back">
+  <button type="button"><a href="/">Go Back</a></button>
+  </div>
 </body>
 </html>
 
